<resources>
    <string name="app_name">Server_Test</string>
    <string name="text_view1">Text View </string>
    <string name="text_view2">Text View 2</string>
    <string name="text_view3">Text View 3</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createact">Create Account</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last Name</string>
    <string name="updateButton">Update</string>
    <string name="rightButton">Right</string>
    <string name="allFridge">My Fridge</string>
    <string name="shoppingListString">Shopping List</string>
    <string name="aboutExpire">About to expire</string>
    <string name="addItem">Add</string>
    <string name="removeButton">Remove</string>
</resources>
