<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/text_view1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/textView1"
        android:layout_weight="66.6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/textView2"
            android:text="@string/text_view2"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/text_view3"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2" />
    </LinearLayout>
</LinearLayout>