<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1FAEE"
    tools:context=".Login">

    <EditText
        android:id="@+id/emailEd"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEd"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:hint="@string/login"
        android:text="@string/login"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordId"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/createAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createact"
        android:fontFamily="@font/open_sans_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintVertical_bias="0.833" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="113dp"
        android:layout_height="85dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/ic_action_name" />

</androidx.constraintlayout.widget.ConstraintLayout>