<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F1FAEE"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecycleView"
        android:layout_width="360dp"
        android:layout_height="464dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#F1FAEE"
        android:padding="4dp"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/button_parse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RecycleView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/updateButton">

    </Button>

    <Button
        android:id="@+id/fridge"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="170dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/allFridge" />

    <Button
        android:id="@+id/shoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="158dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/shoppingListString" />


</RelativeLayout>